--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,30 +32,26 @@ jobs:
             target: x86_64-apple-darwin
     steps:
     - uses: actions/checkout@v4
+    - name: install cargo-hack
+      run: cargo install cargo-hack -v
+    - name: clippy
+      with:
+        RUSTFLAGS: -D warnings
+      run: cargo hack --feature-powerset --workspace --exclude-features cuda,ocl check --all-targets -v
     - name: build
-      if: ${{ !cancelled() }}
       run: cargo build --workspace --features serde --all-targets -v
     - name: test
-      if: ${{ !cancelled() }}
       run: cargo test --workspace --no-default-features --features serde --all-targets -v
-  miri:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions-rs/toolchain@v1
+    - uses: hecrj/setup-rust-action@v2
       with:
-        toolchain: nightly
+        rust-version: nightly
         components: miri
     - name: miri test
       run: cargo +nightly miri test --no-default-features --features serde -v
-  wasm:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
     - name: install wasm-pack
       run: cargo install wasm-pack -vv
     - name: wasm test
-      run: wasm-pack test --headless --firefox -- --no-default-features -vv
+      run: wasm-pack test --headless --firefox -- --no-default-features --features serde -vv
       env:
         RUSTFLAGS: --cfg run_in_browser
   krnlc:
@@ -109,60 +105,50 @@ jobs:
       run: echo "$HOME/spirv-tools/install/bin" >> $env:GITHUB_PATH
     # end install spirv-tools
     - uses: actions/checkout@v4
-    - uses: actions-rs/toolchain@v1
+    - uses: hecrj/setup-rust-action@v2
       with:
-        toolchain: nightly
-    - uses: actions-rs/toolchain@v1
+        rust-version: nightly
+    - uses: hecrj/setup-rust-action@v2
       with:
-        toolchain: nightly-2023-05-27
+        rust-version: nightly-2023-05-27
         components: rust-src, rustc-dev, llvm-tools-preview
     - name: check krnlc
-      if: ${{ !cancelled() }}
       run: cargo +nightly-2023-05-27 -Zunstable-options -C=krnlc check --locked --no-default-features --features use-installed-tools -vv
     - name: install krnlc
-      if: ${{ !cancelled() }}
       run: cargo +nightly-2023-05-27 install --path krnlc --root . --locked --no-default-features --features use-installed-tools -vv --debug
     - name: krnlc check
-      if: ${{ !cancelled() }}
       run: ./bin/krnlc --check -p krnl -p krnlc-tests -p compute-benchmarks -v
   lint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: actions-rs/toolchain@v1
+    - uses: hecrj/setup-rust-action@v2
       with:
-        toolchain: stable
+        rust-version: stable
         components: rustfmt, clippy
-    - uses: actions-rs/toolchain@v1
+    - uses: hecrj/setup-rust-action@v2
       with:
-        toolchain: nightly-2023-05-27
+        rust-version: nightly-2023-05-27
         components: rustfmt, clippy, rust-src, rustc-dev, llvm-tools-preview
     - name: fmt
-      if: ${{ !cancelled() }}
       run: cargo fmt --check
-    - name: install cargo-hack
-      if: ${{ !cancelled() }}
-      run: cargo install cargo-hack -v
-    - name: clippy
-      if: ${{ !cancelled() }}
-      run: cargo hack --feature-powerset --workspace --exclude-features "cuda ocl" --keep-going clippy --all-targets -- -D warnings
     - name: krnlc fmt
-      if: ${{ !cancelled() }}
       run: cargo +nightly-2023-05-27 fmt --check --manifest-path krnlc/Cargo.toml
+    - name: clippy
+      run: |
+        cargo clippy -p krnl -p krnl-macros -p krnl-core -p krnlc-tests --all-features --all-targets -v -- -D warnings
+        cargo clippy -p compute-benches --all-targets -v -- -D warnings
     - name: krnlc clippy
-      if: ${{ !cancelled() }}
       run: cargo +nightly-2023-05-27 clippy --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -v -- -D warnings
     - name: rustdoc
-      if: ${{ !cancelled() }}
       run: cargo rustdoc --all-features -- --D warnings
-    - uses: actions-rs/toolchain@v1
+    - uses: hecrj/setup-rust-action@v2
       with:
-        toolchain: nightly
-    - uses: actions-rs/toolchain@v1
+        rust-version: nightly
+    - uses: hecrj/setup-rust-action@v2
       with:
-        toolchain: 1.70.0
+        rust-version: 1.70.0
     - name: msrv
-      if: ${{ !cancelled() }}
       run: |
         cargo +nightly generate-lockfile -Zmsrv-policy
         cat Cargo.lock
