--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,8 +6,6 @@ on:
     paths-ignore:
       - '**.md'
   pull_request:
-    branches:
-      - "**"
     paths-ignore:
       - '**.md'
 concurrency:
@@ -20,6 +18,7 @@ env:
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 10
     strategy:
       fail-fast: false
       matrix:
@@ -34,11 +33,10 @@ jobs:
     - uses: actions/checkout@v4
     - name: install toolchains
       run: |
-        rustup update
-        rustup toolchain install nightly
-        rustup component add miri --toolchain nightly
-        rustup toolchain install nightly-2023-05-27
-        rustup component add rust-src  rustc-dev  llvm-tools-preview --toolchain nightly-2023-05-27
+        rustup set profile minimal
+        rustup toolchain install stable
+        rustup toolchain install nightly --component miri
+        rustup toolchain install nightly-2023-05-27 --component rust-src  rustc-dev  llvm-tools-preview
     - name: build
       run: cargo build --workspace --features serde --all-targets -v
     - name: test
@@ -53,6 +51,7 @@ jobs:
         RUSTFLAGS: --cfg run_in_browser
   krnlc:
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 10
     env:
       # spirv tools install copied from https://github.com/EmbarkStudios/rust-gpu/blob/main/.github/workflows/ci.yaml
       spirv_tools_version: "20221024"
@@ -77,10 +76,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: install toolchains
       run: |
-        rustup update
-        rustup toolchain install nightly
-        rustup toolchain install nightly-2023-05-27
-        rustup component add rust-src  rustc-dev  llvm-tools-preview --toolchain nightly-2023-05-27
+        rustup set profile minimal
+        rustup toolchain install stable nightly
+        rustup toolchain install nightly-2023-05-27 --component rust-src  rustc-dev  llvm-tools-preview
     - if: ${{ runner.os == 'Linux' }}
       name: Linux - Install native dependencies and spirv-tools
       run: |
@@ -116,16 +114,15 @@ jobs:
       run: ./bin/krnlc --check -p krnl -p krnlc-tests -p compute-benchmarks -v
   lint:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
     - uses: actions/checkout@v4
     - name: install toolchains
       run: |
-        rustup update
-        rustup component add rustfmt clippy
-        rustup toolchain install nightly
-        rustup toolchain install nightly-2023-05-27
-        rustup component add rustfmt clippy rust-src rustc-dev llvm-tools-preview --toolchain nightly-2023-05-27
-        rustup toolchain install 1.70.0
+        rustup set profile minimal
+        rustup toolchain install stable --component rustfmt clippy rust-docs
+        rustup toolchain install nightly 1.70.0
+        rustup toolchain install nightly-2023-05-27 --component rustfmt clippy rust-src rustc-dev llvm-tools-preview
     - name: fmt
       run: cargo fmt --check
     - name: krnlc fmt
@@ -145,8 +142,9 @@ jobs:
         cargo +nightly generate-lockfile -Zmsrv-policy
         cat Cargo.lock
         cargo +1.70.0 check --workspace --features serde --all-targets -v
-  cargo-deny:
+  deny:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
     - uses: actions/checkout@v4
     - uses: EmbarkStudios/cargo-deny-action@v1
