--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,7 @@ half = { workspace = true, features = ["std"] }
 num-traits = { workspace = true, features = ["std"] }
 paste.workspace = true
 dry.workspace = true
-derive_more = { workspace = true, features = ["unwrap", "deref", "deref_mut"] }
+derive_more = { workspace = true, features = ["deref", "deref_mut"] }
 thiserror.workspace = true
 parking_lot = "0.12.1"
 bytemuck.workspace = true
