--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,15 +34,17 @@ jobs:
     - name: install toolchains
       run: |
         rustup set profile minimal
-        rustup toolchain install stable
+        rustup toolchain install stable --component rust-docs
         rustup toolchain install nightly --component miri
         rustup toolchain install nightly-2023-05-27 --component rust-src  rustc-dev  llvm-tools-preview
     - name: build
       run: cargo build --workspace --features serde --all-targets -v
     - name: test
-      run: cargo test --workspace --no-default-features --features serde --all-targets -v
+      run: |
+        cargo test --workspace --no-default-features --features serde -v
+        cargo test -p compute-benches --benches -v
     - name: miri test
-      run: cargo +nightly miri test --no-default-features --features serde -v
+      run: cargo +nightly miri test --tests --no-default-features --features serde -v
     - name: install wasm-pack
       run: cargo install wasm-pack -vv
     - name: wasm test
@@ -136,7 +138,7 @@ jobs:
     - name: krnlc clippy
       run: cargo +nightly-2023-05-27 clippy --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -v -- -D warnings
     - name: rustdoc
-      run: cargo rustdoc --all-features -- --D warnings
+      run: cargo hack -p krnl -p krnl-macros -p krnl-core rustdoc --all-features -v -- --D warnings
     - name: msrv
       run: |
         cargo +nightly generate-lockfile -Zmsrv-policy
