--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -138,7 +138,9 @@ jobs:
     - name: krnlc clippy
       run: cargo +nightly-2023-05-27 clippy --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -v -- -D warnings
     - name: rustdoc
-      run: cargo hack -p krnl -p krnl-macros -p krnl-core rustdoc --all-features -v -- --D warnings
+      run: |
+        cargo hack -p krnl -p krnl-macros -p krnl-core rustdoc --all-features -v -- --D warnings
+        cargo +nightly hack -p krnl -p krnl-core rustdoc --all-features -v -- --cfg doc_cfg --D warnings
     - name: msrv
       run: |
         cargo +nightly generate-lockfile -Zmsrv-policy
