--- a/krnl-core/Cargo.toml
+++ b/krnl-core/Cargo.toml
@@ -11,14 +11,14 @@ homepage.workspace = true
 repository.workspace = true
 license.workspace = true
 publish.workspace = true
-autobins = false 
+autobins = false
 autoexamples = false
 autotests = false
 autobenches = false
 
 [dependencies]
 krnl-macros.workspace = true
-spirv-std =  "=0.9.0"
+spirv-std = "=0.9.0"
 paste.workspace = true
 dry.workspace = true
 
@@ -28,7 +28,10 @@ half = { workspace = true, features = ["bytemuck"] }
 bytemuck.workspace = true
 serde = { version = "1.0.143", features = ["derive"], optional = true }
 thiserror = "1.0.32"
-derive_more = { version = "0.99.11", default-features = false, features = ["display", "is_variant"] }
+derive_more = { version = "0.99.11", default-features = false, features = [
+    "display",
+    "is_variant",
+] }
 paste.workspace = true
 
 [target.'cfg(target_arch = "spirv")'.dependencies]
@@ -40,3 +43,4 @@ serde = ["dep:serde", "half/serde"]
 
 [package.metadata.docs.rs]
 all-features = true
+rustdoc-args = ["--cfg", "doc_cfg"]
