--- a/krnl-macros/Cargo.toml
+++ b/krnl-macros/Cargo.toml
@@ -11,7 +11,7 @@ homepage.workspace = true
 repository.workspace = true
 license.workspace = true
 publish.workspace = true
-autobins = false 
+autobins = false
 autoexamples = false
 autobenches = false
 
@@ -28,10 +28,12 @@ flate2.workspace = true
 hex.workspace = true
 prettyplease = "0.1.21"
 serde = { workspace = true, default-features = false, features = ["derive"] }
-derive_more = { workspace = true, default-features = false, features = ["is_variant"] }
+derive_more = { workspace = true, default-features = false, features = [
+    "is_variant",
+] }
 rustversion.workspace = true
 fxhash.workspace = true
 semver = "1.0.17"
 zero85 = "0.2.0"
 bytemuck.workspace = true
-
+itertools.workspace = true
