--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ hex = "0.4.3"
 rustversion = "1.0.12"
 clap = { version = "4.2.4", features = ["derive"] }
 fxhash = "0.2.1"
+itertools = "0.12.1"
 
 [package]
 name = "krnl"
@@ -77,6 +78,7 @@ flate2.workspace = true
 dashmap = { version = "5.3.4", optional = true }
 rspirv = { workspace = true, optional = true }
 fxhash = { workspace = true, optional = true }
+itertools.workspace = true
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 vulkano = { version = "0.33.0", optional = true, default-features = false }
