docs style + links + imports + ci exhaustive rustdoc tests

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -139,8 +139,8 @@ jobs:
       run: cargo +nightly-2023-05-27 clippy --manifest-path krnlc/Cargo.toml --no-default-features --features use-installed-tools -v -- -D warnings
     - name: rustdoc
       run: |
-        cargo hack -p krnl -p krnl-macros -p krnl-core rustdoc --all-features -v -- --D warnings
-        cargo +nightly hack -p krnl -p krnl-core rustdoc --all-features -v -- --cfg doc_cfg --D warnings
+        cargo hack -p krnl -p krnl-macros -p krnl-core --feature-powerset --skip default rustdoc -v -- --D warnings
+        cargo +nightly hack -p krnl -p krnl-core --feature-powerset --skip default rustdoc -v -- --cfg doc_cfg --D warnings
     - name: msrv
       run: |
         cargo +nightly generate-lockfile -Zmsrv-policy
