--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -140,7 +140,7 @@ jobs:
     - name: rustdoc
       run: |
         cargo hack -p krnl -p krnl-macros -p krnl-core --feature-powerset --skip default rustdoc -v -- --D warnings
-        cargo +nightly hack -p krnl -p krnl-core --feature-powerset --skip default rustdoc -v -- --cfg doc_cfg --D warnings
+        cargo +nightly hack -p krnl -p krnl-core  rustdoc --all-features -v -- --cfg doc_cfg --D warnings
     - name: msrv
       run: |
         cargo +nightly generate-lockfile -Zmsrv-policy
