--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,6 +47,12 @@ jobs:
       run: cargo +nightly miri test --tests --no-default-features --features serde -v
     - name: install wasm-pack
       run: cargo install wasm-pack -vv
+    - name: wasm test safari
+      if: ${{ runner.os == 'macos-latest' }}
+      run: wasm-pack test --headless --safari -- --no-default-features --features serde -vv
+      continue-on-error: true
+      env:
+        RUSTFLAGS: --cfg run_in_browser
     - name: wasm test
       run: wasm-pack test --headless --firefox -- --no-default-features --features serde -vv
       env:
