--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,13 +50,13 @@ jobs:
     - name: wasm test safari
       if: ${{ runner.os == 'macOS' }}
       run: wasm-pack test --headless --safari -- --no-default-features --features serde -vv
-      continue-on-error: true
       env:
         RUSTFLAGS: --cfg run_in_browser
     - name: wasm test
       run: wasm-pack test --headless --firefox -- --no-default-features --features serde -vv
       env:
         RUSTFLAGS: --cfg run_in_browser
+      continue-on-error: ${{ runner.os = 'macOS' }}
   krnlc:
     runs-on: ${{ matrix.os }}
     timeout-minutes: 20
