ci rustup no self update

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,9 +34,9 @@ jobs:
     - name: install toolchains
       run: |
         rustup set profile minimal
-        rustup toolchain install stable --component rust-docs
-        rustup toolchain install nightly --component miri
-        rustup toolchain install nightly-2023-05-27 --component rust-src  rustc-dev  llvm-tools-preview
+        rustup toolchain install stable --component rust-docs --no-self-update
+        rustup toolchain install nightly --component miri --no-self-update
+        rustup toolchain install nightly-2023-05-27 --component rust-src  rustc-dev  llvm-tools-preview --no-self-update
     - name: build
       run: cargo build --workspace --features serde --all-targets -v
     - name: test
@@ -85,8 +85,8 @@ jobs:
     - name: install toolchains
       run: |
         rustup set profile minimal
-        rustup toolchain install stable nightly
-        rustup toolchain install nightly-2023-05-27 --component rust-src  rustc-dev  llvm-tools-preview
+        rustup toolchain install stable nightly --no-self-update
+        rustup toolchain install nightly-2023-05-27 --component rust-src  rustc-dev  llvm-tools-preview --no-self-update
     - if: ${{ runner.os == 'Linux' }}
       name: Linux - Install native dependencies and spirv-tools
       run: |
@@ -128,9 +128,9 @@ jobs:
     - name: install toolchains
       run: |
         rustup set profile minimal
-        rustup toolchain install stable --component rustfmt clippy rust-docs
-        rustup toolchain install nightly 1.70.0
-        rustup toolchain install nightly-2023-05-27 --component rustfmt clippy rust-src rustc-dev llvm-tools-preview
+        rustup toolchain install stable --component rustfmt clippy rust-docs --no-self-update
+        rustup toolchain install nightly 1.70.0 --no-self-update
+        rustup toolchain install nightly-2023-05-27 --component rustfmt clippy rust-src rustc-dev llvm-tools-preview --no-self-update
     - name: fmt
       run: cargo fmt --check
     - name: krnlc fmt
